Overflowing display fixed.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: digital;
+    src: url(digital-7\ \(mono\).ttf);
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -12,8 +17,6 @@ body {
     min-height: 100vh;
 
     background-image: url(images/graphpaper.webp);
-
-
 }
 
 body, button {
@@ -71,6 +74,8 @@ footer {
         font-size: 32px;
         border: 2px solid black;
         background-color: #efefef;
+        font-family: digital;
+        letter-spacing: 0;
     }
 
     .calculator-housing button {
